IT WORKSgit add . !

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^9.0.1"
+  },
+  "dependencies": {
+    "stripe": "^17.2.1"
   }
 }
