--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,26 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "clean": "node seeders/cleanDB.js",
+    "seed": "node seeders/seed.js",
+    "reset": "npm run clean && npm run seed"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "axios": "^1.7.7",
+    "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.1"
-  },
-  "devDependencies": {
-    "eslint": "^8.57.1",
-    "prettier": "^3.3.3"
+    "mongoose": "^8.7.2",
+    "path": "^0.12.7"
   }
 }
